# mempipe

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  comparative_bench_test.go  go.mod  mempipe.go  options.go  pipeline.go  pipeline_test.go  release-please-config.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
builder/: builder.go  builder_bench_test.go  builder_test.go  mem_flow_bench_test.go
docs/: ARCHITECTURE.md  BUILDER_API.md  CONDITIONAL_COMPILATION.md  EXAMPLES.md  INFERENCE.md  MODULES.md  MPMODEL_FORMAT.md  PIPELINE_API.md  TOOLS.md  WASM.md
inference/: converter_connectivity_test.go  engine.go  inference_bench_test.go  inference_test.go  interop_test.go  matmul_generic.go  matmul_simd.go  matmul_wasm.go  model.go  operator.go  quantize.go  rwmutex.go  rwmutex_embedded.go  tensor.go  tensor_test.go  transformer_bench_test.go  transformer_test.go
module/: module.go  rwmutex.go  rwmutex_embedded.go
module/http/: http.go  (+3 more)
runtime/: arena.go  arena_bench_test.go  arena_test.go  clock.go  layout.go  logger.go  pipe.go  region.go  region_bench_test.go  region_test.go  rwmutex.go  rwmutex_embedded.go  scheduler.go  typed_region.go  typed_region_test.go
tools/mempipe-convert/: README.md  pyproject.toml
tools/mempipe-convert/mempipe_convert/: __init__.py  cli.py  converter.py  inspect.py  mpmodel.py  quantize.py  transformer.py  validate.py
tools/mempipe-convert/tests/: test_mpmodel.py  test_transformer.py  test_transformer_connectivity.py
tools/mempipe-convert/zoo/: convert_gpt2.py  convert_mnist.py  convert_mobilenet.py
(+39 files in other folders)
