[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mempipe-convert"
version = "0.1.0"
description = "Convert ONNX/PyTorch/Keras models to MemPipe .mpmodel format"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "MemPipe Authors" }]
keywords = ["mempipe", "inference", "onnx", "model-conversion", "edge-ai"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "onnx>=1.14",
]

[project.optional-dependencies]
validation = ["onnxruntime>=1.16"]
pytorch = ["torch>=2.0"]
keras = ["tf2onnx>=1.15"]
all = [
    "onnxruntime>=1.16",
    "torch>=2.0",
    "tf2onnx>=1.15",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
mempipe-convert = "mempipe_convert.cli:main"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
